# nix-melt

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lock.rs  main.rs  pane.rs  state.rs
