[package]
name = "nix-melt"
version = "0.1.2"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2021"
description = "A ranger-like flake.lock viewer"
readme = "README.md"
homepage = "https://github.com/nix-community/nix-melt"
repository = "https://github.com/nix-community/nix-melt"
license = "MPL-2.0"
keywords = ["cli", "flake", "nix", "tui", "viewer"]
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
eyre = "0.6.11"
indexmap = { version = "2.1.0", features = ["serde"] }
parse-display = "0.8.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
thiserror = "1.0.53"

[dependencies.clap]
version = "4.4.13"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.ratatui]
version = "0.23.0"
default-features = false
features = ["crossterm"]

[dependencies.time]
version = "0.3.31"
features = ["formatting", "local-offset", "serde"]

[build-dependencies]
clap = { version = "4.4.13", features = ["derive"] }
clap_complete = "4.4.6"
clap_mangen = "0.2.15"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
