[package]
name = "nix-melt"
version = "0.1.3"
authors = ["figsoda <figsoda@pm.me>"]
edition = "2024"
description = "A ranger-like flake.lock viewer"
readme = "README.md"
homepage = "https://github.com/nix-community/nix-melt"
repository = "https://github.com/nix-community/nix-melt"
license = "MPL-2.0"
keywords = ["cli", "flake", "nix", "tui", "viewer"]
categories = ["command-line-utilities"]

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
eyre = "0.6.12"
indexmap = { version = "2.14.0", features = ["serde"] }
parse-display = "0.10.0"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"

[dependencies.clap]
version = "4.6.0"
features = ["cargo", "derive", "unicode", "wrap_help"]

[dependencies.ratatui]
version = "0.30.0"
default-features = false
features = ["crossterm"]

[dependencies.time]
version = "0.3.47"
features = ["formatting", "local-offset", "serde"]

[build-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.2"
clap_mangen = "0.3.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
